⚡ version name として modinfo に移動

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 mappings_version = stable_39
 
 mod_version = 0.0.1
+mod_version_name = Egg
 minecraft_version = 1.12.2
 forge_version = 14.23.5.2768
