--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ minecraft {
     // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "${mappings_version}"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+
+    replace 'gradle:version', "${mod_version}"
+    replaceIn "ModInfo.java"
 }
 
 dependencies {
@@ -59,7 +62,7 @@ dependencies {
 
 processResources {
     // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
+    inputs.property "version", "${mod_version_name}"
     inputs.property "mcversion", project.minecraft.version
 
     // replace stuff in mcmod.info, nothing else
@@ -67,7 +70,7 @@ processResources {
         include 'mcmod.info'
                 
         // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+        expand 'version':"${mod_version_name}", 'mcversion':project.minecraft.version
     }
         
     // copy everything else except the mcmod.info
